// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) change-order (a record) 1`] = `
{
  "lines": 1413,
  "sha256": "ff977259a874d108e6530256d854ddfe10a714a19501a66015b4ad7d253b9cf8",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) change-order (project only) 1`] = `
{
  "lines": 1025,
  "sha256": "b724eb8beae4424142df32c16b64710028cb82269db45571ab56968214ef1811",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) invoice (a record) 1`] = `
{
  "lines": 1015,
  "sha256": "0c467bb3840afbf558aefc42d9a5304471e446a04fdf835da7c027cf26098077",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) invoice (project only) 1`] = `
{
  "lines": 1025,
  "sha256": "447070baae07f3f74dc41ace48c7efa6ae7c9d157c0b3c7ccc8079f4b6e44cf5",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) invoice (the tutorial route, type=progress) 1`] = `
{
  "lines": 1036,
  "sha256": "885cc1ee999157dd740493ad56abc3a8c3ca811ecd95bc13a28b450419db436a",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) rfi (a record) 1`] = `
{
  "lines": 863,
  "sha256": "56d144f213354f4c77c292bb23b7447f87bc3a6e5ecdde799ad518c1c1e9727a",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) rfi (project only: the create form) 1`] = `
{
  "lines": 746,
  "sha256": "a887dafc50b7d8a20196c166477ec917d478d7ad1e65d4300b6f796c838e14c9",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) submittal (a record) 1`] = `
{
  "lines": 807,
  "sha256": "4110feecd88227219b57802e5c8a77cdea25d82335aa6f52287bad1f67a86eb1",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) submittal (project only) 1`] = `
{
  "lines": 726,
  "sha256": "b68d467bfe5fd5a9dfc90fed1ac55372524ada8e48a5cfd27d958cda75a41e41",
}
`;

exports[`lane G — the phone is unchanged, bar branches (golden, 390 × 844 iOS) change-order (approved credit: the bill bar says why) 1`] = `
{
  "lines": 991,
  "sha256": "faf936e538795dab0c295aae329abe2a56ba70bba115d5af8f633d7c126e5579",
}
`;

exports[`lane G — the phone is unchanged, bar branches (golden, 390 × 844 iOS) change-order (approved, billable: the bill bar) 1`] = `
{
  "lines": 1003,
  "sha256": "393780b59b3da2ea960c9ca105e775ec2f1177b239d064070f9302c376ecac94",
}
`;

exports[`lane G — the phone is unchanged, bar branches (golden, 390 × 844 iOS) change-order (rejected: locked, no bar) 1`] = `
{
  "lines": 997,
  "sha256": "b95a4073e9e5899470476805d674a8740e3d76fa4ec236202ef83cd3aeb759f9",
}
`;

exports[`lane G — the phone is unchanged, bar branches (golden, 390 × 844 iOS) invoice (sent: reminder and pay link) 1`] = `
{
  "lines": 1010,
  "sha256": "3383574e69c6a5cf6966d1efae2d3cc64c648804169d9e86fc7469d4a14d12b0",
}
`;
